--- a/css/smallproduct.css
+++ b/css/smallproduct.css
@@ -7,12 +7,12 @@ a{
 }
 
 .sidebar{
-	width: 15vmax;
-	min-width: 150px;
-	height: calc(100vmin - 3.6em - 25px);
+	width: 20vw;
+	min-width: 101px;
+	height: 80vh;
 	background: #fff;
 	position: absolute;
-	margin-top: 2.5em;
+	margin-top: 14vh;
 	left: 0;
 	color: #000;
 	border-right: 1px dotted dodgerblue;
@@ -28,12 +28,12 @@ a{
 }
 #productArea{
 	left: 0; 
-	width: min(85vmax, calc(100vmax - 150px));
-	height: calc(100vmin - 3.5em - 25px);
+	width: calc(100vw - 110px);
+	height: 80vh;
 	position: absolute;
-	margin-top: 2.5em;
+	margin-top: 14vh;
 	background: #fff;
-	margin-left: max(15vmax, 150px);
+	margin-left: 110px;
 	overflow-y: scroll;
 }
 
@@ -45,14 +45,14 @@ a{
 	
 }
 .catogeryList div{
-	padding: 1em;
+	padding: 0.5em;
+	transition-duration: 0.3s;
 }
 .catogeryList div:hover{
 	background: rgba(30,144,255,0.8);
 	color: white;
 	font-weight: bold;
-	font-size: 1em;
-	transition-duration: 0.3s;
+	font-size: 0.9em;
 }
 
 #brandList{
@@ -106,12 +106,13 @@ ul{
 }
 
 .product{
-	width:max(15vmax,150px);
-	height: max(15vmax, 150px);
+	width:100px;
+	height: 100px;
 	background: #fff;
 	border: 1px dotted #fff;
 	/*padding-left: 0.5vmax;*/
-	padding: 1vmax auto;
+	text-align: left;
+	padding: 2vmax auto;
 	margin-top: 0px;
 	margin-right: 0;
 	position: relative;
@@ -139,10 +140,11 @@ ul{
 	font-family: sans-serif;
 	background: #fff;
 	margin-top:0; 
-	position: fixed; 
-	width: min(85vmax, calc(100vmax - 150px));
-	z-index: 1;
-	
+	position: fixed;
+	z-index: 2;
+	width: 100%;
+	text-align: left;
+	font-size: 4vh;
 }
 
 .center {
@@ -150,7 +152,6 @@ ul{
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  /*padding-top: 10px;*/
   position: relative;
   font-weight: bold;
 }
