--- a/css/smallproduct.css
+++ b/css/smallproduct.css
@@ -25,7 +25,8 @@ a{
 	font-family: arial; 
 	color: white;
 	padding: 0.5em; 
-	background: dodgerblue
+	background: dodgerblue;
+	font-size: 0.7em;
 }
 #productArea{
 	left: 0; 
@@ -42,11 +43,11 @@ a{
 
 	font-family: sans-serif;
 	
-	font-size: 0.8em;
+	font-size: 0.6em;
 	
 }
 .catogeryList div{
-	padding: 0.5em;
+	padding: 1em;
 	transition-duration: 0.3s;
 }
 .catogeryList div:hover{
@@ -63,12 +64,12 @@ a{
 	/*width: 150px;*/
 	
 	font-family: arial;
-	font-size: 0.8em;
+	font-size: 0.6em;
 }
 
 #brandList div{
 	/*margin-top: 0.5em;*/
-	padding: 0.7em;
+	padding: 1em;
 	transition-duration: 0.1s;
 	transition-timing-function: ease-in-out;
 }
@@ -145,7 +146,7 @@ ul{
 	z-index: 2;
 	width: 100%;
 	text-align: left;
-	font-size: 4vh;
+	font-size: 15px;
 }
 
 .center {
