--- a/css/smallproduct.css
+++ b/css/smallproduct.css
@@ -110,7 +110,7 @@ ul{
 	width:100px;
 	height: 100px;
 	background: #fff;
-	border: 1px dotted #fdf;
+	border: 1px dotted #fff;
 	/*padding-left: 0.5vmax;*/
 	text-align: left;
 	padding: 2vmax auto;
